# spotify-playlist-crewai

./: .env_example  LICENSE  pyproject.toml  readme.md
spotify_playlist/: api.py  main.py  playlist_agents.py  playlist_crew.py  playlist_tasks.py
spotify_playlist/tools/: search_tools.py  spotify_tools.py
static/: index.html
